--- a/package.json
+++ b/package.json
@@ -24,18 +24,62 @@
     "update:check": "ng update",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "commit": "git-cz"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nestjs/common": "^6.3.1",
+    "@nestjs/core": "^6.2.4",
+    "@nestjs/platform-express": "^6.2.4",
+    "reflect-metadata": "^0.1.12",
+    "@angular/animations": "^8.0.0",
+    "@angular/common": "^8.0.0",
+    "@angular/compiler": "^8.0.0",
+    "@angular/core": "^8.0.0",
+    "@angular/forms": "^8.0.0",
+    "@angular/platform-browser": "^8.0.0",
+    "@angular/platform-browser-dynamic": "^8.0.0",
+    "@angular/router": "^8.0.0",
+    "@notadd/magnus": "^0.0.43",
+    "@notadd/magnus-client": "^0.0.32",
+    "@nrwl/angular": "^8.0.0",
+    "apollo-cache-inmemory": "^1.6.0",
+    "apollo-client": "^2.6.0",
+    "apollo-link-error": "^1.1.10",
+    "apollo-link-http": "^1.5.14",
+    "core-js": "^2.5.4",
+    "express": "4.16.3",
+    "graphql": "^14.3.1",
+    "rxjs": "~6.4.0",
+    "zone.js": "^0.9.1"
+  },
   "devDependencies": {
+    "@nrwl/node": "8.0.0",
+    "@nestjs/schematics": "^6.3.0",
+    "@nestjs/testing": "^6.2.4",
+    "@nrwl/nest": "8.0.0",
+    "@nrwl/express": "8.0.0",
+    "@nrwl/react": "8.0.0",
+    "@nrwl/web": "8.0.0",
+    "@nrwl/cypress": "8.1.2",
+    "@nrwl/jest": "8.1.2",
     "@nrwl/workspace": "8.1.2",
+    "@angular/compiler-cli": "^8.0.0",
+    "@angular/language-service": "^8.0.0",
+    "@angular-devkit/build-angular": "^0.800.0",
+    "@angular/cli": "8.0.0",
+    "codelyzer": "~5.0.1",
+    "jest-preset-angular": "7.0.0",
+    "cypress": "~3.3.1",
+    "jest": "24.1.0",
+    "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
+    "ts-jest": "24.0.0",
     "dotenv": "6.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.4.5",
-    "prettier": "1.16.4",
-    "@angular/cli": "8.0.0"
+    "prettier": "1.16.4"
   }
 }
