--- a/package.json
+++ b/package.json
@@ -47,6 +47,12 @@
     "apollo-client": "^2.6.0",
     "apollo-link-error": "^1.1.10",
     "apollo-link-http": "^1.5.14",
+    "@types/glob": "^7.1.1",
+    "@types/jest": "24.0.9",
+    "@types/jquery": "3.3.6",
+    "@types/node": "~8.9.4",
+    "@types/react": "16.8.4",
+    "@types/react-dom": "16.8.2",
     "core-js": "^2.5.4",
     "express": "4.16.3",
     "g": "^2.0.1",
